@@ -7,6 +7,7 @@ Changelog
 - Allow text field in task deadline modification through API. [njohner]
 - Downpin ftw.recipe.solr to 1.2.1 to have log4j configuration valid for solr < 7.4.X [deiferni]
 - Use plone.restapi summary serialization in the recently-touched endpoint. [phgross]
+- dossier_report: Add support for pseudo-relative paths. [lgraf]
 - zip_selected view: Add support for pseudo-relative paths. [lgraf]
 - Fix a problem in the watcher handling when reassigning a task to the same user but a different org unit. [phgross]
 - Support the bundle-import of mails in the msg format. [phgross]
